<resources>
    <string name="app_name">时间轮盘</string>
    <string name="storage_permission">时间轮盘需要存储权限选择图片</string>

    <string name="loc_permission">时间轮盘需要定位权限获取位置</string>

    <string name="num_format">大写数字</string>

    <string name="donate_zfb">打赏</string>
    <string name="vertical_pos">垂直位置</string>
    <string name="horizontal_pos">水平位置</string>
    <string name="scale">缩放大小</string>
    <string name="rotate">旋转角度</string>
    <string name="text_color_dark">文字颜色(深)</string>
    <string name="text_color_light">文字颜色(亮)</string>
    <string name="bg_color">背景颜色</string>
    <string name="bg_img">背景图片</string>
    <string name="set_wallpaper">设置壁纸</string>
    <string name="local_conf">本地配置</string>
    <string name="import_net_conf">导入网络配置</string>
    <string name="about">关于</string>
    <string name="select_conf">选择配置</string>
    <string name="select_conf_1">选择配置\'%s\'</string>
    <string name="select_conf_confirm">确认选择配置</string>
    <string name="select_conf_default">默认配置</string>
    <string name="plz_enter_conf_url">请输入下载直链</string>
    <string name="import_s">导入</string>
    <string name="url_null_tip">请求不能为空</string>
    <string name="url_not_json">链接请以.json结尾</string>
    <string name="url_not_correct">这不是一个有效的链接</string>
    <string name="exist_conf">已存在%s</string>
    <string name="downloading">正在下载</string>
    <string name="import_success">导入成功</string>
    <string name="import_fail">导入失败</string>
    <string name="cancel">取消</string>
    <string name="thanks_for_support">谢谢支持</string>
    <string name="next_time">下次再说</string>
    <string name="copy_code">领红包</string>
    <string name="donate_tip">软件完全免费，如果您觉得软件不错，可以打赏支持，或者打开支付宝首页搜“521043031”领红包哦</string>
    <string name="want_donate">我要打赏</string>
    <string name="conf_error">您的配置有问题</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="set_wallpaper_success">设置动态壁纸成功</string>
    <string name="set_wallpaper_cancel">取消设置动态壁纸</string>
    <string name="version_low">您的系统版本过低，暂不支持本功能~</string>
    <string name="delete_conf">是否删除%s?</string>
    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>
    <string name="title_activity_home">@string/app_name</string>

    <string name="switch_conf_tip">桌面连续点3次切换配置</string>


    <string name="weather_settings">天气设置</string>

    <string name="weather_settings_auto_loc">自动定位</string>


    <string name="weather_settings_area">地区</string>
    <string name="weather_settings_area_none">未设置地区</string>
    <string name="weather_settings_dynamic">动态天气</string>
    <string name="weather_settings_dynamic_summary">壁纸随天气显示动态效果</string>

    <string name="settings">设置</string>
    <string name="other_settings">其他设置</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_settings">@string/settings</string>

    <string name="title_activity_import_net">网络导入</string>


    <string name="variety_conf">百变轮盘</string>

    <string name="click_change">三击切换</string>
    <string name="click_change_summary">通过三击桌面切换配置</string>

    <string name="shake_change">晃动切换</string>
    <string name="shake_change_summary">晃动切换手机切换配置</string>

    <string name="hide_from_recent">任务隐藏</string>
    <string name="hide_from_recent_summary">在最近任务管理器中隐藏时间轮盘</string>

    <string name="rotate_forever">永动模式</string>
    <string name="rotate_forever_summary">轮盘将不停转动，可能会非常耗电</string>

    <string name="perspective_mode">透视模式</string>

    <string name="perspective_mode_manual">手动模式</string>
    <string name="perspective_mode_manual_summary">点击屏幕产生透视效果</string>
    <string name="perspective_mode_sensor">感应模式</string>
    <string name="perspective_mode_sensor_summary">(如有)传感器产生透视效果,仅供娱乐</string>

    <string name="edit_name">修改名字</string>
    <string name="delete">删除</string>
    <string name="group">QQ群</string>
    <string name="ok">确认</string>


    <string name="lc">AM</string>
    <string name="lm">AM</string>
    <string name="zc">AM</string>
    <string name="sw">AM</string>
    <string name="zw">PM</string>
    <string name="xw">PM</string>
    <string name="bw">PM</string>
    <string name="sy">PM</string>

</resources>
