<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_about">

        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

        <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_monetization_on"
                android:title="@string/donate_zfb"/>

        <item
                android:id="@+id/nav_group"
                android:icon="@drawable/ic_group_work"
                android:title="@string/group"/>

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_info"
                android:title="@string/about"/>

    </group>
</menu>