<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="match_parent"
            android:text="@string/set_wallpaper"
            android:clickable="true"
            android:id="@+id/edit_conf"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:textColor="@color/black_de"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            android:text="@string/edit_name"
            android:clickable="true"
            android:id="@+id/edit_name"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:textColor="@color/black_de"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            android:text="@string/delete"
            android:clickable="true"
            android:id="@+id/edit_delete"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:textColor="@color/black_de"
            android:layout_height="wrap_content"/>
</LinearLayout>


