<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardBackgroundColor="#ffffff"
            app:cardElevation="2dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="40dp"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <Button android:layout_width="wrap_content"
                    android:text="@string/set_wallpaper"
                    android:clickable="true"
                    android:id="@+id/edit_conf"
                    android:textSize="15sp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black_de"
                    android:layout_height="wrap_content"/>

            <Button android:layout_width="wrap_content"
                    android:text="@string/edit_name"
                    android:clickable="true"
                    android:id="@+id/edit_name"
                    android:textSize="15sp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black_de"
                    android:layout_height="wrap_content"/>

            <Button android:layout_width="wrap_content"
                    android:text="@string/delete"
                    android:clickable="true"
                    android:id="@+id/edit_delete"
                    android:textSize="15sp"
                    android:gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black_de"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>


